# cozby-claw

./: .gitignore  ARCHITECTURE.md  CONFIG.md  GUIDE.md  LICENSE  README.md  SECURITY.md  USAGE.md  providers.example.toml  release.sh
diagrams/: architecture.md  architecture.puml
rust/: .gitignore  Cargo.toml  README.md
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  lib.rs  providers_config.rs
rust/crates/api/src/providers/: anthropic.rs  openai_compat.rs
rust/crates/appcore/: Cargo.toml
rust/crates/appcore/src/: lib.rs
rust/crates/commands/src/: lib.rs
rust/crates/cozby-mcp/: Cargo.toml
rust/crates/cozby-mcp/src/: bootstrap.rs  lib.rs  main.rs
rust/crates/cozby-mcp/src/application/: mod.rs  ports.rs  use_cases.rs
rust/crates/cozby-mcp/src/domain/: contract.rs  errors.rs  limits.rs  mod.rs  path_guard.rs  tools.rs
rust/crates/cozby-mcp/src/infrastructure/: config.rs  contract_loader.rs  fs_adapter.rs  http_transport.rs  in_memory_fs.rs  mcp_bridge.rs  mod.rs
rust/crates/cozby-mcp/tests/: stdio_flow.rs
rust/crates/gui/: Cargo.toml
rust/crates/gui/src/: agent.rs  app.rs  config.rs  main.rs  protocol.rs  slash.rs  worker.rs
rust/crates/gui/ui/: app.slint
rust/crates/plugins/src/: lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: clock.rs  config.rs  conversation.rs  defaults.rs  diff.rs  file_ops.rs  hooks.rs  lib.rs  mcp_stdio.rs  oauth.rs  prompt.rs  remote.rs  session.rs  session_control.rs  stale_branch.rs  task_packet.rs  task_registry.rs
rust/crates/runtime/src/defaults/: mcp.toml  plugins.toml  settings.toml
rust/crates/runtime/src/defaults/hooks/: verify.sh
rust/crates/runtime/src/defaults/skills/adr/: SKILL.md
rust/crates/runtime/src/defaults/skills/changelog/: SKILL.md
rust/crates/runtime/src/defaults/skills/code-review/: SKILL.md
rust/crates/runtime/src/defaults/skills/commit/: SKILL.md
rust/crates/runtime/src/defaults/skills/consult/: SKILL.md
rust/crates/runtime/src/defaults/skills/debug/: SKILL.md
rust/crates/runtime/src/defaults/skills/grounding/: SKILL.md
rust/crates/runtime/src/defaults/skills/mermaid/: SKILL.md
rust/crates/runtime/src/defaults/skills/plan/: SKILL.md
rust/crates/runtime/src/defaults/skills/pr-description/: SKILL.md
rust/crates/runtime/src/defaults/skills/refactor/: SKILL.md
rust/crates/runtime/src/defaults/skills/rfc/: SKILL.md
rust/crates/runtime/src/defaults/skills/security-review/: SKILL.md
rust/crates/runtime/src/defaults/skills/test-first/: SKILL.md
rust/crates/runtime/src/defaults/skills/verify/: SKILL.md
rust/crates/runtime/tests/: runtime_workflows.rs  worker_lane_hook_task_config_integration.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: init.rs  input.rs  main.rs  render.rs
rust/crates/rusty-claude-cli/src/appui/: highlight.rs  icons.rs  mod.rs  protocol.rs  ui.rs  worker.rs
rust/crates/rusty-claude-cli/src/mux/: client.rs  mod.rs  protocol.rs  server.rs  tui.rs
rust/crates/rusty-claude-cli/tests/: cli_flags_and_config_defaults.rs  mock_parity_harness.rs  resume_slash_commands.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: external_consult.rs  lane_completion.rs  lib.rs  secret_scan.rs
