[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# native-tls → платформенное TLS-хранилище ОС (SChannel/Secure Transport/OpenSSL),
# чтобы корпоративные внутренние CA из системного стора доверялись на корп. ноутах.
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "blocking"] }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
telemetry = { path = "../telemetry" }
toml = "0.8"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }

[lints]
workspace = true
