[package]
name = "appcore"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared runtime-building core for claw frontends (CLI + GUI) — provider selection, system prompt, runtime features."

[dependencies]
api = { path = "../api" }
runtime = { path = "../runtime" }

[lints]
workspace = true
