[package]
name = "cozby-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Standalone MCP stdio server: pure-Rust, root-scoped, read-only filesystem tools."

[lib]
name = "cozby_mcp"
path = "src/lib.rs"

[[bin]]
name = "cozby-mcp"
path = "src/main.rs"

[dependencies]
runtime = { path = "../runtime" }
serde_json.workspace = true
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread"] }
walkdir = "2"
glob = "0.3"
regex = "1"
# native-tls → системное TLS-хранилище ОС (корп. внутренние CA доверяются).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }

[lints]
workspace = true
