[package]
name = "gui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "claw-gui — lightweight egui desktop frontend for the claw coding agent."

[[bin]]
name = "cozby-claw-gui"
path = "src/main.rs"

[dependencies]
runtime = { path = "../runtime" }
api = { path = "../api" }
appcore = { path = "../appcore" }
tools = { path = "../tools" }
serde_json.workspace = true
eframe = "0.29"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[lints]
workspace = true
